[package]
name = "mhub-identity"
description = "Identity feature slice"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
server = ["mhub-kernel/server"]
client = ["mhub-kernel/client"]
full = ["server", "client"]

[dependencies]
mhub-domain.workspace = true
mhub-kernel.workspace = true
mhub-derive.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lib]
name = "mhub_identity"
path = "src/lib.rs"

[lints]
workspace = true
