[package]
name = "mhub-licensing"
description = "Cryptographic licensing engine"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
issuance = ["rand"]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
machineid-rs.workspace = true
mhub-derive.workspace = true
mhub-domain.workspace = true
postcard.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true