[package]
name = "mhub-domain"
description = "Pure domain models (no external dependencies, no logic)"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# ONLY these two!
serde.workspace = true
bitflags.workspace = true
# No more depencies here!

[dev-dependencies]
serde_json.workspace = true

[lib]
name = "mhub_domain"
path = "src/lib.rs"

[lints]
workspace = true
