[package]
name = "mhub-domain"
description = "Domain crate for models and entities (no logic)"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
# There must have been no more depencies

[lints]
workspace = true
