[package]
name = "mhub-core"
description = "Core feature crate for the internal buisness logic"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
api = ["dep:axum", "dep:serde_json", "dep:utoipa", "ed25519-dalek"]
ui = []

[dependencies]
mhub-domain = { path = "../domain" }
mhub-derive.workspace = true

thiserror.workspace = true
axum = { workspace = true, optional = true, features = ["json"] }
serde.workspace = true
serde_json = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }

[lints]
workspace = true
