[package]
name = "{{package_name}}"
description = "{{package_description}}"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
server = ["mhub-kernel/server"]
client = ["mhub-kernel/client"]

[dependencies]
mhub-derive.workspace = true
mhub-domain.workspace = true
mhub-kernel = { workspace = true, default-features = false }
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
