[package]
name = "{{package_name}}"
description = "{{package_description}}"
keywords = []
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
mhub-derive.workspace = true
thiserror.workspace = true

[lints]
workspace = true